AWS/LoadTestLab/app-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-cpu
  namespace: loadtest
spec:
  type: ClusterIP
  selector:
    app: echo-cpu
  ports:
    - name: http
      port: 80
      targetPort: 80
